Aligning to center & fixing classes

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 body, html {
+  height: 100%;
   font-family: Helvetica, sans-serif;
   margin: 0;
 }
 
-.container {
+.title-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
   justify-content: center;
+  padding-top: 100px;
 }
 
 .title {
@@ -16,12 +15,15 @@ body, html {
   font-size: 32px;
 }
 
+.input-box-container {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+
 .input-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 16px;
-  border-radius: 20px;
 }
 
 .inputbox {
